--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/vite": "^4.1.18",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-responsive": "^10.0.1",
